--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
 						<!-- Column 1 (horizontal, vertical, horizontal, vertical) -->
 							<div class="image fit">
-								<a href="Bolanavideña.html"><img src="imagenes/Bola Navideña.jpg" alt="" /></a>
+								<a href="Bolanavideña.html"><img src="images/Bola Navideña.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
-								<a href="Corona Calendario.html"><img src="imagenes/Corona calendario.jpg" alt="" /></a>
+								<a href="Corona Calendario.html"><img src="images/Corona calendario.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
 								<a href="detail1.html"><img src="images/pic03.jpg" alt="" /></a>
@@ -47,7 +47,7 @@
 
 						<!-- Column 2 (vertical, horizontal, vertical, horizontal) -->
 							<div class="image fit">
-								<a href="PapaNoel.html"><img src="imagenes/Papa Noel.jpg" alt="" /></a>
+								<a href="PapaNoel.html"><img src="images/Papa Noel.jpg" alt="" /></a>
 							</div>
 							<div class="image fit">
 								<a href="detail1.html"><img src="images/pic05.jpg" alt="" /></a>
