--- a/PapaNoel.html
+++ b/PapaNoel.html
@@ -28,7 +28,7 @@
 		<div id="preview" class="vertical">
 			<div class="inner">
 				<div class="image fit">
-					<img src="imagenes/Papa Noel.jpg" alt="" />
+					<img src="images/Papa Noel.jpg" alt="" />
 						<img src="imagenes/Papa Noel.jpg" alt="" />
 				</div>
 				<div class="content">
