--- a/PosaVaso.html
+++ b/PosaVaso.html
@@ -28,7 +28,7 @@
 		<div id="preview">
 			<div class="inner">
 				<div class="image fit">
-					<img src="imagenes/Bola Navideña.jpg" alt="" />
+					<img src="images/Bola Navideña.jpg" alt="" />
 				</div>
 				<div class="content">
 					<header>
