--- a/Bolanavideña.html
+++ b/Bolanavideña.html
@@ -28,7 +28,7 @@
 		<div id="preview">
 			<div class="inner">
 				<div class="image fit">
-					<img src="images/BolaNavideña.jpg" alt="" />
+					<img src="Images/BolaNavideña.jpg" alt="" />
 				</div>
 				<div class="content">
 					<header>
