--- a/Corona Calendario.html
+++ b/Corona Calendario.html
@@ -28,7 +28,7 @@
 		<div id="preview" class="vertical">
 			<div class="inner">
 				<div class="image fit">
-					<img src="images/Coronacalendario.jpg" alt="" />
+					<img src="Images/Coronacalendario.jpg" alt="" />
 
 				</div>
 				<div class="content">
