--- a/PapaNoel.html
+++ b/PapaNoel.html
@@ -28,8 +28,8 @@
 		<div id="preview" class="vertical">
 			<div class="inner">
 				<div class="image fit">
-					<img src="images/PapaNoel.jpg" alt="" />
-						<img src="imagenes/PapaNoel.jpg" alt="" />
+					<img src="Images/PapaNoel.jpg" alt="" />
+						<img src="Images/PapaNoel.jpg" alt="" />
 				</div>
 				<div class="content">
 					<header>
